--- a/src/components/pages/styles.css
+++ b/src/components/pages/styles.css
@@ -96,16 +96,15 @@ a {
 }
 
 .containers {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  position: relative;
-  overflow: hidden;
-  width: 768px;
-  max-width: 100%;
-  min-height: 480px;
-  margin: auto;
-}
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    margin: auto;
+    height: 550px;
+    width: 65%;}
 
 .form-containers {
   position: absolute;
@@ -168,17 +167,17 @@ a {
 }
 
 .overlay {
-  background: #ff416c;
+  /* background: #ff416c;
   background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
   background: linear-gradient(to right, #ff4b2b, #ff416c);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 0;
-  color: #ffffff;
+  background-position: 0 0; */
+  /* color: #ffffff;
   position: relative;
   left: -100%;
   height: 100%;
-  width: 200%;
+  width: 200%; */
   transform: translateX(0);
   transition: transform 0.6s ease-in-out;
 }
