--- a/src/components/pages/styles.css
+++ b/src/components/pages/styles.css
@@ -96,16 +96,16 @@ a {
 }
 
 .containers {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  position: relative;
-  overflow: hidden;
-  width: 768px;
-  margin: 5% 0 0 17%;
-  height: 550px;
-  width: 65%;
-}
+       background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25), 0 0px 0px rgba(0, 0, 0, 0.22);
+ 
+    position: relative;
+    overflow: hidden;
+    margin: 13% 0 20px 17%;
+    height: 500px !important;
+    width: 70%;
+ }
 
 .form-containers {
   position: absolute;
